[gd_scene load_steps=2 format=3 uid="uid://runinfopanel"]

[ext_resource type="Script" path="res://scripts/ui/RunInfoPanel.gd" id="1_c7r0m"]

[node name="RunInfoPanel" type="Control"]
anchors_preset = 0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -240.0
offset_right = 280.0
offset_bottom = -16.0
script = ExtResource("1_c7r0m")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
self_modulate = Color(1, 1, 1, 0.85)

[node name="Margin" type="MarginContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
separation = 8

[node name="Title" type="Label" parent="Panel/Margin/VBox"]
text = "Forest Overview"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnLabel" type="Label" parent="Panel/Margin/VBox"]
text = "Turn: 0"

[node name="DeckLabel" type="Label" parent="Panel/Margin/VBox"]
text = "Deck: 0 tiles remaining"

[node name="SproutLabel" type="Label" parent="Panel/Margin/VBox"]
text = "Sprouts: 0"

[node name="Separator" type="HSeparator" parent="Panel/Margin/VBox"]

[node name="ResourceGrid" type="GridContainer" parent="Panel/Margin/VBox"]
columns = 2
custom_constants/vertical_separation = 4

[node name="NatureLabel" type="Label" parent="Panel/Margin/VBox/ResourceGrid"]
text = "Nature Essence"

[node name="NatureValue" type="Label" parent="Panel/Margin/VBox/ResourceGrid"]
text = "0"
horizontal_alignment = 2

[node name="EarthLabel" type="Label" parent="Panel/Margin/VBox/ResourceGrid"]
text = "Earth Essence"

[node name="EarthValue" type="Label" parent="Panel/Margin/VBox/ResourceGrid"]
text = "0"
horizontal_alignment = 2

[node name="WaterLabel" type="Label" parent="Panel/Margin/VBox/ResourceGrid"]
text = "Water Essence"

[node name="WaterValue" type="Label" parent="Panel/Margin/VBox/ResourceGrid"]
text = "0"
horizontal_alignment = 2

[node name="LifeLabel" type="Label" parent="Panel/Margin/VBox/ResourceGrid"]
text = "Life Essence"

[node name="LifeValue" type="Label" parent="Panel/Margin/VBox/ResourceGrid"]
text = "0"
horizontal_alignment = 2

[node name="NextTileLabel" type="Label" parent="Panel/Margin/VBox"]
text = "Next Tile: (deck empty)"
